# declare-what-you-use

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
examples/example1/: .dwyuignore  CMakeLists.txt  foo.c  foo.h  main.c
scripts/: dwyu.sh
src/: main.cpp
